[project]
name = "kiwoom-restful"
dynamic = ["version"]
readme = "README.md"
description = "Simple Python Wrapper for Kiwoom REST API+"

authors = [{name = "breadum", email = "breadum.kr@gmail.com"}]
license = "MIT"
keywords =[
    "키움증권",
    "Kiwoom",
    "Heroes",
    "REST API",
]
classifiers = [
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"
packages = "kiwoom"
dependencies = [
    "pandas>=2",
    "numpy>=2",
    "msgspec>=0.19.0",
    "orjson>=3.11.3",
    "aiohttp[speedups]>=3.12.15",
]

[project.urls]
Homepage = "https://github.com/breadum/kiwoom-restful"
Documentation = "https://breadum.github.io/kiwoom-restful/"
Repository = "https://github.com/breadum/kiwoom-restful"
Download = " https://pypi.org/project/kiwoom-restful"
Issues = "https://github.com/breadum/kiwoom-restful/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "kiwoom/__version__.py"

[tool.pdm.build]
package-dir = "."
includes = ["kiwoom"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
# PEP8(E,W,F), Import 정렬(I), 기본 버그패턴(B)
select = ["E", "F", "W", "I", "B"]
ignore = [
    "D100",  # public module docstring 
    "D104",  # public package docstring
    "D107",  # docstring in __init__
    "E731",  # lambda 제한 해제
]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "IPython>=8.37.0",
    "ipykernel>=6.30.1",
]
lint = [
    "ruff>=0.12.12",
]
publish = [
    "twine>=6.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-material>=9.6.19",
]
